excess returns analysis

--- a/src/01_yield_spreads.ipynb
+++ b/src/01_yield_spreads.ipynb
@@ -1342,6 +1342,205 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excess_df_reset = excess_returns_df.reset_index()\n",
+    "common_df_2 = pd.merge(excess_df_reset, us_corp_df, on=\"date\", how=\"inner\", suffixes=('_ret', '_corp'))\n",
+    "r_squared_list_2 = []\n",
+    "for decile in range(11, 21):\n",
+    "    ret_col = decile\n",
+    "    corp_col = \"US_bonds_\" + str(decile)\n",
+    "    \n",
+    "    if ret_col in common_df_2.columns and corp_col in common_df_2.columns:\n",
+    "        sub_df = common_df_2[[ret_col, corp_col]].dropna()\n",
+    "        if len(sub_df) > 0:\n",
+    "            corr = sub_df[ret_col].corr(sub_df[corp_col])\n",
+    "            r2 = corr ** 2\n",
+    "        else:\n",
+    "            r2 = None\n",
+    "    else:\n",
+    "        r2 = None\n",
+    "\n",
+    "    r_squared_list_2.append({\"decile\": decile, \"r_squared\": r2})\n",
+    "\n",
+    "r_squared_df_2 = pd.DataFrame(r_squared_list_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>decile</th>\n",
+       "      <th>r_squared</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.004609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.014647</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.112480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.188833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0.343133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.455347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.389103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.388928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.684873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.556141</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   decile  r_squared\n",
+       "0      11   0.004609\n",
+       "1      12   0.014647\n",
+       "2      13   0.112480\n",
+       "3      14   0.188833\n",
+       "4      15   0.343133\n",
+       "5      16   0.455347\n",
+       "6      17   0.389103\n",
+       "7      18   0.388928\n",
+       "8      19   0.684873\n",
+       "9      20   0.556141"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_squared_df_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>cusip_date</th>\n",
+       "      <th>price_eom</th>\n",
+       "      <th>tmt</th>\n",
+       "      <th>yield</th>\n",
+       "      <th>t_yld_pt</th>\n",
+       "      <th>ret_eom</th>\n",
+       "      <th>year</th>\n",
+       "      <th>tr_return</th>\n",
+       "      <th>tr_ytm_match</th>\n",
+       "      <th>tau</th>\n",
+       "      <th>yield_spread</th>\n",
+       "      <th>TTM_diff</th>\n",
+       "      <th>decile</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, cusip, cusip_date, price_eom, tmt, yield, t_yld_pt, ret_eom, year, tr_return, tr_ytm_match, tau, yield_spread, TTM_diff, decile]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged[merged['tau']<1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
