--- a/src/01_yield_spreads.ipynb
+++ b/src/01_yield_spreads.ipynb
@@ -1148,7 +1148,7 @@
    "source": [
     "## Decile Replication Analysis\n",
     "\n",
-    "Below is a summary of the replication metrics for deciles 11 through 20. The table includes:\n",
+    "Below is a summary of the replication metrics for portfolios 11 through 20. The table includes:\n",
     "- **Correlation** (Pearson) between each replicated decile return and the benchmark\n",
     "- **R²** (the square of the correlation)\n",
     "- **Slope** and **Intercept** from a simple linear regression of benchmark returns on replicated returns\n",
