--- a/src/01_yield_spreads.ipynb
+++ b/src/01_yield_spreads.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -17,6 +24,7 @@
     "import pull_CRSP_bond_returns\n",
     "import pull_he_kelly_manela_factors\n",
     "import calc_nozawa_portfolio\n",
+    "import calc_metrics\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from misc_tools import *"
@@ -33,6 +41,13 @@
     "\n",
     "OUTPUT_DIR = Path(config(\"OUTPUT_DIR\"))\n",
     "DATA_DIR = Path(config(\"DATA_DIR\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Processing"
    ]
   },
   {
@@ -87,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data processing also generates the 10 corporate bond portfolios per Nozawa (2017) used by He, Kelly, and Manela (2017)."
+    "The data processing also generates the deciles for the 10 corporate bond portfolios per Nozawa (2017) used by He, Kelly, and Manela (2017)."
    ]
   },
   {
@@ -684,6 +699,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can compare the decile returns to the He, Kelly, and Manela factors, in which they calculated the returns for each Nozawa decile corporate bond portfolio:"
    ]
   },
@@ -957,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1132,13 +1154,13 @@
        "9        0.039987  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "analysis_df = pull_he_kelly_manela_factors.calculate_decile_analysis(decile_returns_df, us_corp_df)\n",
+    "analysis_df = calc_metrics.calculate_decile_analysis(decile_returns_df, us_corp_df)\n",
     "analysis_df"
    ]
   },
