clean up and bug fixes

--- a/src/01_yield_spreads.ipynb
+++ b/src/01_yield_spreads.ipynb
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data processing also generates the deciles for the 10 corporate bond portfolios per Nozawa (2017) used by He, Kelly, and Manela (2017)."
+    "The data processing also generates the deciles for the 10 corresponding corporate bond portfolios per Nozawa (2017) used by He, Kelly, and Manela (2017)."
    ]
   },
   {
@@ -1003,7 +1003,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>decile</th>\n",
+       "      <th>portfolio</th>\n",
        "      <th>correlation</th>\n",
        "      <th>r_squared</th>\n",
        "      <th>slope</th>\n",
@@ -1129,17 +1129,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   decile  correlation  r_squared     slope  intercept       mae      rmse  \\\n",
-       "0      11     0.826345   0.682846  0.939331   0.003843  0.004000  0.005666   \n",
-       "1      12     0.911769   0.831322  0.879599   0.002889  0.003553  0.004847   \n",
-       "2      13     0.963630   0.928583  0.919407   0.001174  0.002422  0.003430   \n",
-       "3      14     0.944526   0.892128  0.835088   0.001682  0.002980  0.004157   \n",
-       "4      15     0.905730   0.820347  0.784203  -0.000092  0.004369  0.005600   \n",
-       "5      16     0.804738   0.647604  0.536827   0.000810  0.005399  0.007185   \n",
-       "6      17     0.849566   0.721763  0.430626   0.002074  0.003792  0.005693   \n",
-       "7      18     0.934429   0.873158  0.410123   0.003076  0.003146  0.003914   \n",
-       "8      19     0.943317   0.889847  0.439899   0.003437  0.003384  0.005068   \n",
-       "9      20     0.944279   0.891662  0.414569   0.005259  0.006887  0.009583   \n",
+       "   portfolio  correlation  r_squared     slope  intercept       mae      rmse  \\\n",
+       "0         11     0.826345   0.682846  0.939331   0.003843  0.004000  0.005666   \n",
+       "1         12     0.911769   0.831322  0.879599   0.002889  0.003553  0.004847   \n",
+       "2         13     0.963630   0.928583  0.919407   0.001174  0.002422  0.003430   \n",
+       "3         14     0.944526   0.892128  0.835088   0.001682  0.002980  0.004157   \n",
+       "4         15     0.905730   0.820347  0.784203  -0.000092  0.004369  0.005600   \n",
+       "5         16     0.804738   0.647604  0.536827   0.000810  0.005399  0.007185   \n",
+       "6         17     0.849566   0.721763  0.430626   0.002074  0.003792  0.005693   \n",
+       "7         18     0.934429   0.873158  0.410123   0.003076  0.003146  0.003914   \n",
+       "8         19     0.943317   0.889847  0.439899   0.003437  0.003384  0.005068   \n",
+       "9         20     0.944279   0.891662  0.414569   0.005259  0.006887  0.009583   \n",
        "\n",
        "   tracking_error  \n",
        "0        0.005691  \n",
