--- a/reports/final_report.tex
+++ b/reports/final_report.tex
@@ -1,283 +1,136 @@
-% !TeX root = report_example.tex
+% !TeX root = final_report.tex
 \newcommand*{\PathToAssets}{../assets}%
 \newcommand*{\PathToOutput}{../_output}%
-% \newcommand*{\PathToBibFile}{bibliography.bib}%
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% This file is compiled with XeLaTex.
+%% This file is compiled with XeLaTeX.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[12pt]{article}
-%\documentclass[reqno]{amsart}
-%\documentclass[titlepage]{amsart}
 \usepackage{my_article_header}
 \usepackage{my_common_header}
+\usepackage{graphicx}
+\usepackage{float} % Allows using [H] to force figure placement
 
 \begin{document}
+
 \title{
 Replicating the Nozawa Corporate Bond Portfolios from He, Kelly, and Manela (2017)
-\\{\color{blue} \large Preliminary Idea Write-up}
 }
-% {\color{blue} \large Preliminary. Do not distribute.}
-% }
-
 \author{
-Insert Authors Here\footnote{Author affiliation}
-  % \newline 
-  % \hspace{3pt} \indent \hspace{3pt}
-  % % I am immensely grateful to...
+Jesse Yan \& Gabriel Ran
 }
-% \maketitle
-\begin{titlepage}
-% \input{cover_letter.tex}
 \maketitle
-%http://tex.stackexchange.com/questions/141446/problem-of-duplicate-identifier-when-using-bibentry-and-hyperref
-% \nobibliography*
 
-% Abstract should have fewer than 150 words
-
-\doublespacing
 \begin{abstract}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-sunt in culpa qui officia deserunt mollit anim id est laborum.
+This report documents our attempt to replicate the decile-sorted corporate bond portfolios originally constructed by Nozawa, as described in He, Kelly, and Manela (2017). We used the WRDS Bond Returns Database in combination with the latest WRDS (TRACE) Duration-Matched Treasury Returns (Open Source Bond Pricing, June 2024 release) contributed by Yoshio Nozawa to estimate yield spreads and replicate the subsequent returns. Notably, while the original HKM dataset covers 1970--2012, Nozawa's duration-matched Treasuries data is available from 2002 to 2023, limiting our replication to the overlapping period (2002--2012). Despite challenges such as missing yield data, negative amounts outstanding, and partial coverage of duration-matched Treasuries, our final decile returns closely track the original benchmark’s direction and ordering.
 \end{abstract}
 
-
-\end{titlepage}
-
-\doublespacing
 \section{Introduction}
+This project aims to reproduce the corporate bond decile portfolios sorted by yield spreads, as introduced by Nozawa and detailed in He, Kelly, and Manela (2017). Our primary data sources are:
+\begin{itemize}
+  \item \textbf{WRDS Bond Returns Database} for corporate bond yield, return, and amount outstanding information, and
+  \item \textbf{Latest WRDS (TRACE) Duration-Matched Treasury Returns} (Open Source Bond Pricing, June 2024 release) contributed by Yoshio Nozawa, which provides U.S. Treasury bond yields and returns aligned with the duration of each corporate bond.
+\end{itemize}
 
-Accumsan lacus vel facilisis volutpat est velit egestas. Nisi quis eleifend
-quam adipiscing. Turpis egestas pretium aenean pharetra magna ac placerat.
-Nec tincidunt praesent semper feugiat nibh. Sapien et ligula ullamcorper
-malesuada. Ac turpis egestas integer eget aliquet nibh praesent. Purus in
-massa tempor nec feugiat nisl pretium. Et sollicitudin ac orci phasellus
-egestas tellus rutrum tellus pellentesque. Aliquet nibh praesent tristique
-magna sit. Sem et tortor consequat id.
+While He, Kelly, and Manela (HKM) originally span 1970--2012, the duration‐matched Treasury dataset starts in 2002 and continues through 2023. Consequently, the only overlapping interval between the HKM dataset and Nozawa’s updated duration‐matched data is roughly 2002--2012, restricting our replication to that period.
 
+\subsection{Data Coverage and Challenges}
+We observed that no corporate bonds had a corresponding yield in the first available month (August 2002) to compare with the duration-matched Treasury yield, so we started our replication from September 2002 onward. In other months, missing yield data occurred because some bonds had no trading volume; we were unable to calculate yields for those bonds given the limited methodological guidance in the literature. Additionally, some bonds exhibited negative amounts outstanding, which required data cleaning. As a result, while the replicated portfolios follow the overall direction and trend of the benchmark from 2002 to 2012, exact numerical matching was not achieved.
 
-\begin{textbox}{green}{Comments}
-Here is a textbox...
-\end{textbox}
+\section{Methodology}
+\subsection{Yield Spread Calculation}
+To calculate the yield spread for each corporate bond, we subtracted the duration-matched YTM (yield to maturity) of the Treasuries (obtained from Open Source Bond Pricing) from the corporate bond yield (obtained from WRDS). We then formed deciles based on these yield spreads each month.
 
-I give an example of a simple table in Table \ref{table:pandas_to_latex_simple_table1.tex}.
+\subsection{Portfolio Construction and Returns}
+After assigning each bond to a decile, we computed the subsequent month’s return for that bond. Each decile’s return was calculated as a weighted average of its constituent bonds’ returns, using the bond’s amount outstanding as the weight. Since no bonds had duration-matched Treasury yields in August 2002, the first month of return replication began in September 2002. The final sample ends in 2012 to match the last available year of the HKM data.
 
+\section{Data Overview}
+In this section, we show a snapshot of the replication sample and the benchmark data. Each table displays the first 10 and last 10 rows of the respective datasets.
 
-\begin{table}
-\caption{A Simple Table From Pandas, No. 1}
+\begin{table}[htbp]
 \centering
-\input{\PathToOutput/pandas_to_latex_simple_table1.tex}
-\caption*{
-  Here I show some data...
+\caption{Replication Portfolio Returns}
+{\footnotesize
+\renewcommand{\arraystretch}{0.9} % Adjust row spacing if needed
+\resizebox{\textwidth}{!}{%
+  \input{\PathToOutput/replication_table.tex}
 }
-\label{table:pandas_to_latex_simple_table1.tex}
+}
+\caption*{\footnotesize This table displays a head/tail snapshot of the replication portfolio returns, which are monthly from September 2002 onward. The yield spreads and returns are based on combining WRDS corporate bond data and duration-matched Treasury yields from Nozawa’s dataset.}
+\label{table:replication_sample}
 \end{table}
 
-
-\section{Model}
-
-The Black–Scholes equation governing the price evolution of derivatives under
-the Black–Scholes model is given in (\ref{eq:black-scholes}). Some aligned
-equations are given in (\ref{eq:align1}) and (\ref{eq:align2}). I give an
-example in which the two share a single equation number in
-(\ref{eq:align-share}). Be sure to take a look at the results in 
-Table \ref{table:example_table.tex} and the diagram in 
-Figure \ref{fig:star_network_n_nodes.eps}.
-Arcu felis bibendum ut tristique et. Eget gravida
-cum sociis natoque penatibus et magnis. Elit pellentesque habitant morbi
-tristique senectus et netus et.
-\todo[inline]{This is an inline TODO note} 
-Nunc sed blandit libero volutpat.
-Potenti nullam ac tortor vitae purus faucibus. Turpis massa sed elementum
-tempus. Aliquet eget sit amet tellus. Pharetra convallis posuere morbi leo
-urna molestie at. Massa ultricies mi quis hendrerit dolor magna. Elit
-pellentesque habitant morbi tristique senectus et netus et malesuada. In
-hendrerit gravida rutrum quisque. Facilisi cras fermentum odio eu.
-Pellentesque elit ullamcorper dignissim cras tincidunt. Lacinia at quis
-risus sed vulputate odio ut enim. 
-\todo{This is a TODO in the margin.}
-
-\begin{equation}
-\frac{\partial V}{\partial t} + \frac{1}{2}\sigma^2 S^2 \frac{\partial^2 V}{\partial S^2} 
-+ rS\frac{\partial V}{\partial S} - rV = 0
-\label{eq:black-scholes}
-\end{equation}
-
-Accumsan lacus vel facilisis volutpat est velit egestas. Nisi quis eleifend
-quam adipiscing. Turpis egestas pretium aenean pharetra magna ac placerat.
-Nec tincidunt praesent semper feugiat nibh. Sapien et ligula ullamcorper
-malesuada. Ac turpis egestas integer eget aliquet nibh praesent. Purus in
-massa tempor nec feugiat nisl pretium. Et sollicitudin ac orci phasellus
-egestas tellus rutrum tellus pellentesque. Aliquet nibh praesent tristique
-magna sit. Sem et tortor consequat id.
-
-\begin{align}
-P(S_t, t) &= Ke^{-r(T - t)} - S_t + C(S_t, t)   \label{eq:align1}\\
-          &= N(-d_-) Ke^{-r(T - t)} - N(-d_+) S_t \label{eq:align2}
-\end{align}
-
-
-
-\begin{table}
-\caption{Summary Stats}
+\begin{table}[htbp]
 \centering
-\input{\PathToOutput/example_table.tex}
-\caption*{
-  Here I show some data...
+\caption{Benchmark US Corporate Bond Returns}
+{\footnotesize
+\renewcommand{\arraystretch}{0.9}
+\resizebox{\textwidth}{!}{%
+  \input{\PathToOutput/us_corp_table.tex}
 }
-\label{table:example_table.tex}
+}
+\caption*{\footnotesize This table provides a similar head/tail snapshot of the benchmark returns from He, Kelly, and Manela (2017). It serves as the comparison point for evaluating our replicated portfolios, restricted to the overlapping 2002--2012 period.}
+\label{table:benchmark}
 \end{table}
 
-\begin{align}
-\begin{split}
-P(S_t, t) &= Ke^{-r(T - t)} - S_t + C(S_t, t)   \\
-          &= N(-d_-) Ke^{-r(T - t)} - N(-d_+) S_t 
-\end{split}
-\label{eq:align-share}
-\end{align}
+\section{Summary Statistics}
+In addition to the decile analysis, we computed summary statistics for both the benchmark and the replicated returns. The tables below present the mean, standard deviation, cumulative return, and the period over which the data are available (start and end dates) for each decile. Although the overall directional trends are similar between the benchmark and replication summaries, small differences in magnitude are evident. These discrepancies likely arise from missing yield data and other data cleaning challenges.
 
-
-
-Vitae congue mauris rhoncus aenean. Turpis egestas pretium aenean pharetra.
-Non pulvinar neque laoreet suspendisse interdum consectetur libero id
-faucibus. Id porta nibh venenatis cras sed. Viverra tellus in hac habitasse
-platea. Sit amet facilisis magna etiam tempor orci eu lobortis elementum.
-Porttitor leo a diam sollicitudin. Imperdiet proin fermentum leo vel orci
-porta non. Maecenas pharetra convallis posuere morbi. Vel risus commodo
-viverra maecenas accumsan lacus vel facilisis volutpat. Faucibus vitae
-aliquet nec ullamcorper sit amet risus nullam. Sit amet venenatis urna cursus
-eget nunc scelerisque viverra mauris. A arcu cursus vitae congue. Ullamcorper
-morbi tincidunt ornare massa eget.
-
-\begin{figure}
+\begin{table}[htbp]
 \centering
-\captionsetup{width=0.8\textwidth}
-\caption{Network}
-  \centering
-  \includegraphics[width=0.6\linewidth]{\PathToAssets/star_network_n_nodes.eps}
-\caption*{
-  Star network
-  }
-\label{fig:star_network_n_nodes.eps}
+\caption{Benchmark Summary Statistics}
+{\footnotesize
+\renewcommand{\arraystretch}{0.9}
+\resizebox{\textwidth}{!}{%
+  \input{\PathToOutput/benchmark_summary.tex}
+}
+}
+\caption*{\footnotesize This table provides summary statistics for the benchmark US corporate bond returns. The statistics indicate overall trends that align with the replicated data, albeit with slight differences in average returns and volatility.}
+\label{table:benchmark_summary}
+\end{table}
+
+\begin{table}[htbp]
+\centering
+\caption{Replication Summary Statistics}
+{\footnotesize
+\renewcommand{\arraystretch}{0.9}
+\resizebox{\textwidth}{!}{%
+  \input{\PathToOutput/replicate_summary.tex}
+}
+}
+\caption*{\footnotesize This table shows summary statistics for the replicated decile returns. Although these statistics capture the general direction of the benchmark data, differences in the mean, standard deviation, and cumulative return suggest that the replication is not a perfect match, likely due to data limitations.}
+\label{table:replicate_summary}
+\end{table}
+
+\section{Replication Analysis}
+Below is a table of the key replication metrics, treating each decile’s replicated returns relative to the benchmark. Although we achieved strong alignment in trends and directions, some differences emerged due to missing yield data and partial coverage of duration-matched Treasuries.
+
+\begin{table}[htbp]
+\centering
+\caption{Decile Replication Analysis}
+\resizebox{\textwidth}{!}{%
+  \input{\PathToOutput/analysis_table.tex}
+}
+\caption*{\footnotesize Correlations, R$^2$, regression slope, intercept, MAE, RMSE, and tracking error for decile portfolios. High correlations and low errors suggest a solid replication, though exact agreement was not always possible.}
+\label{table:analysis}
+\end{table}
+
+\section{Results and Discussion}
+\subsection{Cumulative Returns of Decile Portfolios}
+Figure~\ref{fig:cumulative_returns} shows the cumulative returns for each of the ten deciles. Although our replication focuses on the 2002--2012 overlap, we extended the plot for illustrative purposes using all available data points from Nozawa’s dataset. Notably, portfolios with the \textbf{lowest yield spreads} (e.g., Decile~11) tend to exhibit more stable, steady growth, reflecting a relatively lower risk profile. Conversely, portfolios with the \textbf{highest yield spreads} (e.g., Decile~20) show greater volatility—achieving higher peaks but also larger drawdowns, aligning with the higher-risk nature of high-spread bonds.
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=1\textwidth]{\PathToOutput/cumulative_returns.png}
+\caption{Cumulative Returns of Replicated Decile Portfolios}
+\caption*{\footnotesize This figure illustrates the cumulative returns for each yield-spread decile over time. Portfolios in lower deciles (lower spreads) show steadier returns and less volatility, while higher-spread deciles exhibit higher peaks and more pronounced drawdowns. The ordering confirms the risk-return relationship typically associated with yield spreads.}
+\label{fig:cumulative_returns}
 \end{figure}
 
+\subsection{Overall Assessment}
+Despite missing yield data and necessary data cleaning (e.g., handling negative amounts outstanding), we largely succeeded in replicating the decile returns for the overlapping 2002--2012 period. The correlation and regression statistics (Table~\ref{table:analysis}) indicate that our replicated returns closely track the benchmark. However, the summary statistics (Tables~\ref{table:benchmark_summary} and \ref{table:replicate_summary}) reveal small discrepancies in the mean, standard deviation, and cumulative returns between the benchmark and replicated data. These differences suggest that while the replication captures the overall directional trend and risk-return profile, exact numerical matching was not achieved due to data limitations.
 
-Eget duis at tellus at. Turpis egestas integer eget aliquet nibh praesent
-tristique magna. Egestas diam in arcu cursus euismod quis viverra nibh cras.
-Velit laoreet id donec ultrices tincidunt arcu non sodales. Urna duis
-convallis convallis tellus id. Ut pharetra sit amet aliquam. Adipiscing
-commodo elit at imperdiet dui accumsan sit. Arcu cursus euismod quis viverra
-nibh. Dictum at tempor commodo ullamcorper a. Nunc eget lorem dolor sed
-viverra. Pellentesque pulvinar pellentesque habitant morbi tristique senectus
-et netus et. Feugiat pretium nibh ipsum consequat nisl vel. Magna fermentum
-iaculis eu non diam phasellus vestibulum. Et netus et malesuada fames ac
-turpis. Purus ut faucibus pulvinar elementum integer enim neque. Sem
-fringilla ut morbi tincidunt augue. Facilisi cras fermentum odio eu feugiat
-pretium nibh. Pellentesque nec nam aliquam sem et. Mi bibendum neque egestas
-congue quisque egestas diam. For example, see \citet{fama1992cross}. Also, here's another
-way to cite \citep{sharpe1964capital}.
+\section{Conclusion}
+Our replication of Nozawa’s corporate bond portfolios from He, Kelly, and Manela (2017) shows strong alignment in direction and decile ranking during the overlapping 2002--2012 window. The combination of WRDS corporate bond data and Nozawa’s duration-matched Treasury yields allowed us to construct yield spreads and subsequent returns starting in September 2002. Key challenges included missing yield data, negative amounts outstanding, and limited data coverage relative to the broader 1970--2012 HKM sample. Overall, however, the high correlations, low error measures, and similar decile trajectories indicate a largely successful replication effort, even though slight differences in summary statistics point to some inherent data challenges.
 
-\begin{figure}
-\centering
-\caption{Example plot}
-  \centering
-  \includegraphics[width=0.75\linewidth]{\PathToOutput/example_plot.png}
-  % \caption{Average returns}
-\caption*{
-  Inflation and Real GDP...
-  }
-\label{fig:div-futures-habits-comparison}
-\end{figure}
-
-Enim sit amet venenatis urna cursus eget. Dictumst quisque sagittis purus sit
-amet volutpat consequat mauris. Accumsan sit amet nulla facilisi morbi tempus
-iaculis urna id. Vel turpis nunc eget lorem dolor. Rutrum quisque non tellus
-orci ac auctor augue mauris. Vestibulum mattis ullamcorper velit sed
-ullamcorper morbi. In fermentum posuere urna nec tincidunt. Mollis nunc sed
-id semper risus in hendrerit gravida rutrum. Ante in nibh mauris cursus
-mattis molestie a iaculis at. Consectetur a erat nam at. Ac turpis egestas
-integer eget aliquet nibh praesent tristique. Et netus et malesuada fames ac.
-Mollis nunc sed id semper risus in hendrerit gravida. Platea dictumst quisque
-sagittis purus.
-
-\begin{mydefinition}[Fibration]
-  A fibration is a mapping between two topological spaces that has the homotopy lifting property for every space \(X\).
-\end{mydefinition}
-
-\begin{proposition}
-  Let \(f\) be a function whose derivative exists in every point, then \(f\) is 
-  a continuous function.
-\end{proposition}
-\begin{proof}
-  We have that \(f\) is a differentiable function and so it must be continuous.
-\end{proof}
-
-\begin{mylemma}
-  Given two line segments whose lengths are \(a\) and \(b\) respectively there is a 
-  real number \(r\) such that \(b=ra\).
-\end{mylemma}
-
-\begin{proof}
-  To prove it by contradiction try and assume that the statement is false,
-  proceed from there and at some point you will arrive to a contradiction.
-\end{proof}
-
-Ac turpis egestas maecenas pharetra convallis posuere. Vitae aliquet nec
-ullamcorper sit amet risus nullam. Feugiat nisl pretium fusce id velit ut
-tortor pretium. Nec ullamcorper sit amet risus nullam eget felis eget nunc.
-Luctus accumsan tortor posuere ac ut consequat semper viverra nam. Egestas
-pretium aenean pharetra magna. Pharetra massa massa ultricies mi quis
-hendrerit dolor. Est ullamcorper eget nulla facilisi etiam dignissim diam.
-Sagittis vitae et leo duis ut diam quam. Magna ac placerat vestibulum lectus
-mauris ultrices eros in cursus. Adipiscing diam donec adipiscing tristique
-risus nec feugiat in. Sed pulvinar proin gravida hendrerit.
-
-Magna eget est lorem ipsum dolor. Id ornare arcu odio ut sem nulla pharetra.
-Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Vulputate odio ut
-enim blandit volutpat maecenas volutpat blandit aliquam. Turpis egestas
-integer eget aliquet nibh praesent tristique magna. Diam phasellus vestibulum
-lorem sed risus ultricies tristique nulla. Augue lacus viverra vitae congue
-eu. Lacus laoreet non curabitur gravida. Iaculis urna id volutpat lacus
-laoreet. Mi in nulla posuere sollicitudin aliquam ultrices sagittis. Enim
-nunc faucibus a pellentesque sit amet porttitor eget. Aliquam sem fringilla
-ut morbi tincidunt augue interdum velit euismod. Pellentesque massa placerat
-duis ultricies lacus sed.
-
-Et tortor consequat id porta. Nam libero justo laoreet sit amet cursus sit. A
-iaculis at erat pellentesque adipiscing commodo elit. Pharetra vel turpis
-nunc eget. Turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet. Quam
-adipiscing vitae proin sagittis. Vitae suscipit tellus mauris a diam maecenas
-sed enim ut. Rutrum tellus pellentesque eu tincidunt. Pellentesque diam
-volutpat commodo sed. Erat velit scelerisque in dictum non. Consectetur lorem
-donec massa sapien faucibus et molestie. Suspendisse potenti nullam ac
-tortor. Amet massa vitae tortor condimentum lacinia quis. Et malesuada fames
-ac turpis egestas maecenas pharetra. Augue eget arcu dictum varius duis at
-consectetur lorem.
-
-\newpage
-\bibliographystyle{jpe}
-\bibliography{bibliography.bib}  % list here all the bibliographies that you need. 
-% \bibliography{\PathToBibFile}
-% \printbibliography
-
-\newpage
-\begin{appendices}
-\section{Proofs}
-
-TODO
-
-
-
-\section{Recycle Bin}
-{\textbf{(Short-term parking spot for material that may be re-used or deleted at a later time)}}
-
-
-TODO
-
-\end{appendices}
 \end{document}
