--- a/src/01_yield_spreads.ipynb
+++ b/src/01_yield_spreads.ipynb
@@ -1016,8 +1016,8 @@
        "      <th>r_squared</th>\n",
        "      <th>slope</th>\n",
        "      <th>intercept</th>\n",
-       "      <th>mae</th>\n",
-       "      <th>rmse</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>RMSE</th>\n",
        "      <th>tracking_error</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1137,7 +1137,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   portfolio  correlation  r_squared     slope  intercept       mae      rmse  \\\n",
+       "   portfolio  correlation  r_squared     slope  intercept       MAE      RMSE  \\\n",
        "0         11     0.826345   0.682846  0.939331   0.003843  0.004000  0.005666   \n",
        "1         12     0.911769   0.831322  0.879599   0.002889  0.003553  0.004847   \n",
        "2         13     0.963630   0.928583  0.919407   0.001174  0.002422  0.003430   \n",
@@ -1168,7 +1168,7 @@
     }
    ],
    "source": [
-    "analysis_df = calc_metrics.calculate_decile_analysis(decile_returns_df, us_corp_df)\n",
+    "analysis_df, benchmark_summary, replicate_summary = calc_metrics.calculate_decile_analysis(decile_returns_df, us_corp_df)\n",
     "analysis_df"
    ]
   },
@@ -1176,12 +1176,330 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's take a look at the reproduction of Nozawa updated with current data:"
+    "Summary statistics for the Nozawa portfolios per He, Kelly, and Manela:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>portfolio</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>cumulative_return</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.005640</td>\n",
+       "      <td>0.010138</td>\n",
+       "      <td>0.436648</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.006883</td>\n",
+       "      <td>0.011893</td>\n",
+       "      <td>0.554856</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.006262</td>\n",
+       "      <td>0.012935</td>\n",
+       "      <td>0.492414</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.006608</td>\n",
+       "      <td>0.012755</td>\n",
+       "      <td>0.526336</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0.005792</td>\n",
+       "      <td>0.013315</td>\n",
+       "      <td>0.447293</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.005597</td>\n",
+       "      <td>0.012197</td>\n",
+       "      <td>0.430459</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.005923</td>\n",
+       "      <td>0.010877</td>\n",
+       "      <td>0.462431</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.007271</td>\n",
+       "      <td>0.011076</td>\n",
+       "      <td>0.595252</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.007991</td>\n",
+       "      <td>0.015388</td>\n",
+       "      <td>0.665107</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.013578</td>\n",
+       "      <td>0.029340</td>\n",
+       "      <td>1.341111</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  portfolio      mean       std  cumulative_return start_date   end_date\n",
+       "0        11  0.005640  0.010138           0.436648 2002-09-30 2011-11-30\n",
+       "1        12  0.006883  0.011893           0.554856 2002-09-30 2011-11-30\n",
+       "2        13  0.006262  0.012935           0.492414 2002-09-30 2011-11-30\n",
+       "3        14  0.006608  0.012755           0.526336 2002-09-30 2011-11-30\n",
+       "4        15  0.005792  0.013315           0.447293 2002-09-30 2011-11-30\n",
+       "5        16  0.005597  0.012197           0.430459 2002-09-30 2011-11-30\n",
+       "6        17  0.005923  0.010877           0.462431 2002-09-30 2011-11-30\n",
+       "7        18  0.007271  0.011076           0.595252 2002-09-30 2011-11-30\n",
+       "8        19  0.007991  0.015388           0.665107 2002-09-30 2011-11-30\n",
+       "9        20  0.013578  0.029340           1.341111 2002-09-30 2011-11-30"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmark_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary statistics for our replication of the Nozawa portfolios:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>portfolio</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>cumulative_return</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>0.001913</td>\n",
+       "      <td>0.008919</td>\n",
+       "      <td>0.129450</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.004540</td>\n",
+       "      <td>0.012328</td>\n",
+       "      <td>0.335913</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0.005534</td>\n",
+       "      <td>0.013557</td>\n",
+       "      <td>0.423095</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>0.005899</td>\n",
+       "      <td>0.014426</td>\n",
+       "      <td>0.455857</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15</td>\n",
+       "      <td>0.007504</td>\n",
+       "      <td>0.015378</td>\n",
+       "      <td>0.613435</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0.008917</td>\n",
+       "      <td>0.018285</td>\n",
+       "      <td>0.761839</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.008938</td>\n",
+       "      <td>0.021459</td>\n",
+       "      <td>0.757061</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.010229</td>\n",
+       "      <td>0.025235</td>\n",
+       "      <td>0.899743</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>19</td>\n",
+       "      <td>0.010351</td>\n",
+       "      <td>0.032998</td>\n",
+       "      <td>0.888257</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>20</td>\n",
+       "      <td>0.020068</td>\n",
+       "      <td>0.066829</td>\n",
+       "      <td>2.182438</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   portfolio      mean       std  cumulative_return start_date   end_date\n",
+       "0         11  0.001913  0.008919           0.129450 2002-09-30 2011-11-30\n",
+       "1         12  0.004540  0.012328           0.335913 2002-09-30 2011-11-30\n",
+       "2         13  0.005534  0.013557           0.423095 2002-09-30 2011-11-30\n",
+       "3         14  0.005899  0.014426           0.455857 2002-09-30 2011-11-30\n",
+       "4         15  0.007504  0.015378           0.613435 2002-09-30 2011-11-30\n",
+       "5         16  0.008917  0.018285           0.761839 2002-09-30 2011-11-30\n",
+       "6         17  0.008938  0.021459           0.757061 2002-09-30 2011-11-30\n",
+       "7         18  0.010229  0.025235           0.899743 2002-09-30 2011-11-30\n",
+       "8         19  0.010351  0.032998           0.888257 2002-09-30 2011-11-30\n",
+       "9         20  0.020068  0.066829           2.182438 2002-09-30 2011-11-30"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "replicate_summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's take a look at our reproduction of Nozawa updated with current data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1201,13 +1519,20 @@
        " <Axes: title={'center': 'Cumulative Return of Each Portfolio'}, xlabel='Date', ylabel='Cumulative Return'>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "calc_metrics.plot_cumulative_returns(updated_reproduction_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This figure illustrates the cumulative returns for each yield-spread decile over time with updated numbers from 2012 - 2024. Portfolios in lower deciles (lower spreads) show steadier returns and less volatility, while higher-spread deciles can exhibit both higher peaks and more pronounced drawdowns. The ordering confirms the risk-return relationship typically associated with yield spreads."
    ]
   },
   {
