forward fill check, doesn't work

--- a/src/01_yield_spreads.ipynb
+++ b/src/01_yield_spreads.ipynb
@@ -1575,8 +1575,248 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cusip</th>\n",
+       "      <th>date</th>\n",
+       "      <th>price_eom</th>\n",
+       "      <th>tmt</th>\n",
+       "      <th>amount_outstanding</th>\n",
+       "      <th>yield</th>\n",
+       "      <th>t_yld_pt</th>\n",
+       "      <th>ret_eom</th>\n",
+       "      <th>year</th>\n",
+       "      <th>cusip_date</th>\n",
+       "      <th>ret_eom_fwd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>147410</th>\n",
+       "      <td>000325AA8</td>\n",
+       "      <td>2002-07-31</td>\n",
+       "      <td>100.625000</td>\n",
+       "      <td>0.552778</td>\n",
+       "      <td>93834.0</td>\n",
+       "      <td>0.077313</td>\n",
+       "      <td>0.087787</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>000325AA8_20020731</td>\n",
+       "      <td>0.005162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147411</th>\n",
+       "      <td>000325AA8</td>\n",
+       "      <td>2002-08-31</td>\n",
+       "      <td>100.375000</td>\n",
+       "      <td>0.466667</td>\n",
+       "      <td>93834.0</td>\n",
+       "      <td>0.079328</td>\n",
+       "      <td>0.087969</td>\n",
+       "      <td>0.005162</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>000325AA8_20020831</td>\n",
+       "      <td>0.007239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147412</th>\n",
+       "      <td>000325AA8</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>100.375000</td>\n",
+       "      <td>0.383333</td>\n",
+       "      <td>93834.0</td>\n",
+       "      <td>0.077078</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.007239</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>000325AA8_20020930</td>\n",
+       "      <td>0.014816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147413</th>\n",
+       "      <td>000325AA8</td>\n",
+       "      <td>2002-10-31</td>\n",
+       "      <td>101.125000</td>\n",
+       "      <td>0.297222</td>\n",
+       "      <td>93834.0</td>\n",
+       "      <td>0.047935</td>\n",
+       "      <td>0.048735</td>\n",
+       "      <td>0.014816</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>000325AA8_20021031</td>\n",
+       "      <td>-0.000199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147414</th>\n",
+       "      <td>000325AA8</td>\n",
+       "      <td>2002-11-30</td>\n",
+       "      <td>100.375000</td>\n",
+       "      <td>0.213889</td>\n",
+       "      <td>93834.0</td>\n",
+       "      <td>0.067898</td>\n",
+       "      <td>0.065307</td>\n",
+       "      <td>-0.000199</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>000325AA8_20021130</td>\n",
+       "      <td>0.003678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>391999</th>\n",
+       "      <td>U9221AAZ1</td>\n",
+       "      <td>2022-02-28</td>\n",
+       "      <td>102.970000</td>\n",
+       "      <td>28.961111</td>\n",
+       "      <td>950000.0</td>\n",
+       "      <td>0.049557</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.003766</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>U9221AAZ1_20220228</td>\n",
+       "      <td>-0.023262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392000</th>\n",
+       "      <td>U9221AAZ1</td>\n",
+       "      <td>2022-03-31</td>\n",
+       "      <td>100.061667</td>\n",
+       "      <td>28.875000</td>\n",
+       "      <td>950000.0</td>\n",
+       "      <td>0.051443</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.023262</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>U9221AAZ1_20220331</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225764</th>\n",
+       "      <td>U9221ABJ6</td>\n",
+       "      <td>2023-07-31</td>\n",
+       "      <td>95.665000</td>\n",
+       "      <td>30.188889</td>\n",
+       "      <td>730000.0</td>\n",
+       "      <td>0.056193</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>U9221ABJ6_20230731</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124624</th>\n",
+       "      <td>U9221ABN7</td>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>71.710000</td>\n",
+       "      <td>36.677778</td>\n",
+       "      <td>2385000.0</td>\n",
+       "      <td>0.053832</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>U9221ABN7_20231231</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>432530</th>\n",
+       "      <td>Y2066G120</td>\n",
+       "      <td>2015-05-31</td>\n",
+       "      <td>24.887834</td>\n",
+       "      <td>5.030556</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>0.501592</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Y2066G120_20150531</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3749151 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            cusip       date   price_eom        tmt  amount_outstanding  \\\n",
+       "147410  000325AA8 2002-07-31  100.625000   0.552778             93834.0   \n",
+       "147411  000325AA8 2002-08-31  100.375000   0.466667             93834.0   \n",
+       "147412  000325AA8 2002-09-30  100.375000   0.383333             93834.0   \n",
+       "147413  000325AA8 2002-10-31  101.125000   0.297222             93834.0   \n",
+       "147414  000325AA8 2002-11-30  100.375000   0.213889             93834.0   \n",
+       "...           ...        ...         ...        ...                 ...   \n",
+       "391999  U9221AAZ1 2022-02-28  102.970000  28.961111            950000.0   \n",
+       "392000  U9221AAZ1 2022-03-31  100.061667  28.875000            950000.0   \n",
+       "225764  U9221ABJ6 2023-07-31   95.665000  30.188889            730000.0   \n",
+       "124624  U9221ABN7 2023-12-31   71.710000  36.677778           2385000.0   \n",
+       "432530  Y2066G120 2015-05-31   24.887834   5.030556             55000.0   \n",
+       "\n",
+       "           yield  t_yld_pt   ret_eom  year          cusip_date  ret_eom_fwd  \n",
+       "147410  0.077313  0.087787       NaN  2002  000325AA8_20020731     0.005162  \n",
+       "147411  0.079328  0.087969  0.005162  2002  000325AA8_20020831     0.007239  \n",
+       "147412  0.077078       NaN  0.007239  2002  000325AA8_20020930     0.014816  \n",
+       "147413  0.047935  0.048735  0.014816  2002  000325AA8_20021031    -0.000199  \n",
+       "147414  0.067898  0.065307 -0.000199  2002  000325AA8_20021130     0.003678  \n",
+       "...          ...       ...       ...   ...                 ...          ...  \n",
+       "391999  0.049557       NaN  0.003766  2022  U9221AAZ1_20220228    -0.023262  \n",
+       "392000  0.051443       NaN -0.023262  2022  U9221AAZ1_20220331          NaN  \n",
+       "225764  0.056193       NaN       NaN  2023  U9221ABJ6_20230731          NaN  \n",
+       "124624  0.053832       NaN       NaN  2023  U9221ABN7_20231231          NaN  \n",
+       "432530  0.501592       NaN       NaN  2015  Y2066G120_20150531          NaN  \n",
+       "\n",
+       "[3749151 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crsp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
