added overall row

--- a/reports/final_report.tex
+++ b/reports/final_report.tex
@@ -45,7 +45,28 @@ To calculate the yield spread for each corporate bond, we subtracted the duratio
 After assigning each bond to a decile, we computed the subsequent month’s return for that bond. Each decile’s return was calculated as a weighted average of its constituent bonds’ returns, using the bond’s amount outstanding as the weight. Since no bonds had duration-matched Treasury yields in August 2002, the first month of return replication began in September 2002. The final sample ends in 2012 to match the last available year of the HKM data.
 
 \section{Data Overview}
-In this section, we show a snapshot of the replication returns and the benchmark returns data. Each table displays the first 10 and last 10 rows of the respective datasets. We also include a time-series plot of the average corporate bond yield and the average duration-matched Treasury yield over the same sample period, highlighting the spread between the two.
+In this section, we include a time-series plot of the average corporate bond yield and the average duration-matched Treasury yield over the same sample period, highlighting the spread between the two. We also show a snapshot of the benchmark returns and the replication returns data. Each table displays the first 10 and last 10 rows of the respective datasets. 
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{\PathToOutput/avg_yield_tr_ytm.png}
+  \caption{Average US Corporate Bond Yield and Duration-Matched US Treasury Yield Over Time}
+  \caption*{\footnotesize This figure plots the monthly average corporate bond yield and the average duration-matched US Treasury yield from 2002 to 2023. The gap between the two lines illustrates the yield spread driving our decile construction.}
+  \label{fig:avg_yield_tr_ytm}
+  \end{figure}
+
+\begin{table}[htbp]
+  \centering
+  \caption{Benchmark US Corporate Bond Returns}
+  {\footnotesize
+  \renewcommand{\arraystretch}{0.9}
+  \resizebox{\textwidth}{!}{%
+    \input{\PathToOutput/us_corp_table.tex}
+  }
+  }
+  \caption*{\footnotesize This table provides a similar head/tail snapshot of the benchmark returns from He, Kelly, and Manela (2017). It serves as the comparison point for evaluating our replicated portfolios, restricted to the overlapping 2002--2012 period.}
+  \label{table:benchmark}
+  \end{table}
 
 \begin{table}[htbp]
 \centering
@@ -60,29 +81,9 @@ In this section, we show a snapshot of the replication returns and the benchmark
 \label{table:replication_sample}
 \end{table}
 
-\begin{table}[htbp]
-\centering
-\caption{Benchmark US Corporate Bond Returns}
-{\footnotesize
-\renewcommand{\arraystretch}{0.9}
-\resizebox{\textwidth}{!}{%
-  \input{\PathToOutput/us_corp_table.tex}
-}
-}
-\caption*{\footnotesize This table provides a similar head/tail snapshot of the benchmark returns from He, Kelly, and Manela (2017). It serves as the comparison point for evaluating our replicated portfolios, restricted to the overlapping 2002--2012 period.}
-\label{table:benchmark}
-\end{table}
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=1\textwidth]{\PathToOutput/avg_yield_tr_ytm.png}
-\caption{Average US Corporate Bond Yield and Duration-Matched US Treasury Yield Over Time}
-\caption*{\footnotesize This figure plots the monthly average corporate bond yield and the average duration-matched US Treasury yield from 2002 to 2023. The gap between the two lines illustrates the yield spread driving our decile construction.}
-\label{fig:avg_yield_tr_ytm}
-\end{figure}
 
 \section{Summary Statistics}
-In addition to the decile analysis, we computed summary statistics for both the benchmark and the replicated returns. The tables below present the mean, standard deviation, cumulative return, and the period over which the data are available (start and end dates) for each decile. Although the overall directional trends are similar between the benchmark and replication summaries, small differences in magnitude are evident. These discrepancies likely arise from missing yield data and other data cleaning challenges.
+In addition to the decile analysis, we computed summary statistics for both the benchmark and the replicated returns, in addition to the overall data. The tables below present the mean, standard deviation, cumulative return, and the period over which the data are available (start and end dates) for each decile. Although the overall directional trends are similar between the benchmark and replication summaries, small differences in magnitude are evident. These discrepancies likely arise from missing yield data and other data cleaning challenges.
 
 \begin{table}[htbp]
 \centering
