--- a/src/01_yield_spreads.ipynb
+++ b/src/01_yield_spreads.ipynb
@@ -1304,22 +1304,32 @@
        "      <td>2002-09-30</td>\n",
        "      <td>2011-11-30</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Overall</td>\n",
+       "      <td>0.007154</td>\n",
+       "      <td>0.011193</td>\n",
+       "      <td>0.583141</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  portfolio      mean       std  cumulative_return start_date   end_date\n",
-       "0        11  0.005640  0.010138           0.436648 2002-09-30 2011-11-30\n",
-       "1        12  0.006883  0.011893           0.554856 2002-09-30 2011-11-30\n",
-       "2        13  0.006262  0.012935           0.492414 2002-09-30 2011-11-30\n",
-       "3        14  0.006608  0.012755           0.526336 2002-09-30 2011-11-30\n",
-       "4        15  0.005792  0.013315           0.447293 2002-09-30 2011-11-30\n",
-       "5        16  0.005597  0.012197           0.430459 2002-09-30 2011-11-30\n",
-       "6        17  0.005923  0.010877           0.462431 2002-09-30 2011-11-30\n",
-       "7        18  0.007271  0.011076           0.595252 2002-09-30 2011-11-30\n",
-       "8        19  0.007991  0.015388           0.665107 2002-09-30 2011-11-30\n",
-       "9        20  0.013578  0.029340           1.341111 2002-09-30 2011-11-30"
+       "   portfolio      mean       std  cumulative_return start_date   end_date\n",
+       "0         11  0.005640  0.010138           0.436648 2002-09-30 2011-11-30\n",
+       "1         12  0.006883  0.011893           0.554856 2002-09-30 2011-11-30\n",
+       "2         13  0.006262  0.012935           0.492414 2002-09-30 2011-11-30\n",
+       "3         14  0.006608  0.012755           0.526336 2002-09-30 2011-11-30\n",
+       "4         15  0.005792  0.013315           0.447293 2002-09-30 2011-11-30\n",
+       "5         16  0.005597  0.012197           0.430459 2002-09-30 2011-11-30\n",
+       "6         17  0.005923  0.010877           0.462431 2002-09-30 2011-11-30\n",
+       "7         18  0.007271  0.011076           0.595252 2002-09-30 2011-11-30\n",
+       "8         19  0.007991  0.015388           0.665107 2002-09-30 2011-11-30\n",
+       "9         20  0.013578  0.029340           1.341111 2002-09-30 2011-11-30\n",
+       "10   Overall  0.007154  0.011193           0.583141 2002-09-30 2011-11-30"
       ]
      },
      "execution_count": 11,
@@ -1463,6 +1473,15 @@
        "      <td>2002-09-30</td>\n",
        "      <td>2011-11-30</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Overall</td>\n",
+       "      <td>0.008389</td>\n",
+       "      <td>0.018947</td>\n",
+       "      <td>0.701724</td>\n",
+       "      <td>2002-09-30</td>\n",
+       "      <td>2011-11-30</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1478,7 +1497,8 @@
        "6         17  0.008938  0.021459           0.757061 2002-09-30 2011-11-30\n",
        "7         18  0.010229  0.025235           0.899743 2002-09-30 2011-11-30\n",
        "8         19  0.010351  0.032998           0.888257 2002-09-30 2011-11-30\n",
-       "9         20  0.020068  0.066829           2.182438 2002-09-30 2011-11-30"
+       "9         20  0.020068  0.066829           2.182438 2002-09-30 2011-11-30\n",
+       "10   Overall  0.008389  0.018947           0.701724 2002-09-30 2011-11-30"
       ]
      },
      "execution_count": 12,
