--- a/reports/bibliography.bib
+++ b/reports/bibliography.bib
@@ -21,12 +21,14 @@
 }
 
 @misc{openbond2024,
+  author = {{Open Source Bond Asset Pricing}},
   title = {Open Source Bond Asset Pricing},
   howpublished = "\url{https://openbondassetpricing.com/}",
   note = {Accessed: \today}
 }
 
 @misc{crspbond,
+  author = {{Wharton Research Data Services (WRDS)}},
   title = {CRSP Bond Returns Database},
   howpublished = "Wharton Research Data Services (WRDS)",
   note = {Accessed: \today}
