--- a/reports/bibliography.bib
+++ b/reports/bibliography.bib
@@ -24,12 +24,14 @@
   author = {{Open Source Bond Asset Pricing}},
   title = {Open Source Bond Asset Pricing},
   howpublished = "\url{https://openbondassetpricing.com/}",
-  note = {Accessed: \today}
+  note = {Accessed: \today},
+  year = {\currentyear}
 }
 
 @misc{crspbond,
   author = {{Wharton Research Data Services (WRDS)}},
   title = {CRSP Bond Returns Database},
   howpublished = "Wharton Research Data Services (WRDS)",
-  note = {Accessed: \today}
+  note = {Accessed: \today},
+  year = {\currentyear}
 }
